--- a/index.html
+++ b/index.html
@@ -672,11 +672,11 @@
     <section class="fade">
       <div class="card">
         <p>
-          Ken jobber ved Norges Bank.<br>
-          Det høres som en vanlig jobb — inntil du skjønner hva det <strong>faktisk</strong> betyr:
+          Ken jobber i Norges Bank.<br>
+          Det hører ut som en vanlig jobb — inntil du skjønner hva det <strong>faktisk</strong> betyr:
         </p>
         <p>
-          <strong>Han blir betalt for å gjøre penger verdt mindre.</strong>
+          <strong>Han får betalt for å gjøre penger verdt mindre.</strong>
         </p>
         <p>
           Ikke med et ran. Ikke med svindel.<br>
@@ -980,10 +980,10 @@
           <div class="popup">
             <div class="popup-icon">₿🔥</div>
             <h2>Gratulerer!</h2>
-            <p>Din Bitcoin er nå borte.</p>
+            <p>Din Bitcoin er nå stjålet av Ken, samme som han ødelegger andre arbeid via skjult stjeling aka. inflasjon.</p>
             <p style="font-size: 0.95rem; color: #666; margin-top: 1.5rem;">
               Takket være Kens utrettelige arbeid i Norges Bank,<br>
-              har inflasjonen spist opp verdien din.
+              har inflasjonen spist opp kronene du har spart i banken også!
             </p>
             <button class="popup-btn" onclick="this.parentElement.parentElement.remove()">😭 Takk, Ken</button>
           </div>
